Fixed extra space on mobile screen

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,11 +5,18 @@
   scroll-behavior: smooth;
 }
 
+html {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   display: flex;
   flex-direction: column;
   background: var(--color-bg);
   min-height: calc(100vh - 42px);
+  width: 100%;
+  overflow-x: hidden;
 }
 
 a {
