--- a/client/src/containers/header/header.css
+++ b/client/src/containers/header/header.css
@@ -98,7 +98,12 @@
 }
 
 @media screen and (max-width: 700px) {
-  .nagadb__header{
+  .nagadb__header.section__padding{
+    padding: 2rem;
+    align-items: center;
+  }
+  .nagadb__header-content {
+    margin: 0;
     padding: 0;
   }
   .nagadb__header h1 {
